# asgardpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  dev-requirements.txt  download_asgardpy_data.sh  environment.yml  environment_0.4.4.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: cffconvert.yml  changelog.yml  codacy.yml  main.yml  pr_checks.yml
asgardpy/: __init__.py  conftest.py  version.py
asgardpy/analysis/: __init__.py  analysis.py  fit.py  step.py
asgardpy/analysis/tests/: test_analysis_steps.py
asgardpy/base/: __init__.py  base.py  geom.py  reduction.py
asgardpy/config/: __init__.py  generator.py  model_template.yaml  model_template_bpl.yaml  model_template_bpl2.yaml  model_template_eclp.yaml  model_template_secpl.yaml  reader.py  template.yaml  template_model.yaml
asgardpy/config/model_templates/: model_template_pl.yaml
asgardpy/config/tests/: test_config.py
asgardpy/data/: __init__.py  base.py  dataset_1d.py  dataset_3d.py  dl4.py  geom.py  iact.py  reduction.py  target.py
asgardpy/data/tests/: test_catalog.py  test_dataset1d.py  test_dataset3d.py  test_dl4.py  test_gpy_mwl.py
asgardpy/gammapy/: __init__.py  interoperate_config.py  interoperate_models.py
asgardpy/io/: __init__.py  input_dl3.py  io.py  io_dl4.py
asgardpy/stats/: __init__.py  stats.py
asgardpy/stats/tests/: .nfs00000000008effbd00022d1b  test_model_pref.py
asgardpy/tests/: config_gpy_mwl.yaml  config_test_base.yaml  config_test_gadf.yaml  test_basic.py
asgardpy/utils/: __init__.py  plot.py
dev/: README.md  codespell_ignore_words.txt
docs/changes/: 137.feature.rst  138.feature.rst  139.feature.rst  141.feature.rst  142.feature.rst  143.feature.rst  145.bugfix.rst  151.maintenance.rst  154.maintenance.rst  155.feature.rst  156.maintenance.rst  157.maintenance.rst  158.maintenance.rst  160.feature.rst  165.api.rst  171.maintenance.rst  172.feature.rst  173.maintenance.rst  174.api.rst  175.maintenance.rst  178.feature.rst  179.bugfix.rst  180.maintenance.rst  182.maintenance.rst  184.feature.rst  185.maintenance.rst  190.api.rst  191.maintenance.rst  192.maintenance.rst  194.bugfix.rst  197.maintenance.rst  199.maintenance.rst  200.api.rst  202.maintenance.rst  205.maintenance.rst  README.md
docs/source/: CODE_OF_CONDUCT.md  additional_dataset_input.rst  additional_model_input.rst  additional_stats.rst  analysis.rst  asgardpy.rst  base_base.rst  base_geom.rst  changelog.rst  conf.py  config.rst  crab_sed.rst  data.rst  data_1d.rst  data_3d.rst  data_base.rst  data_dl4.rst  data_target.rst  data_target_b.rst  data_target_f.rst  index.rst  installation.md  io.rst  need_for_asgardpy.rst  overview.rst
docs/source/_api_docs/: analysis.rst  api.rst  base.rst  base_geom.rst  base_reduction.rst  config.rst  data.rst  data_dl4.rst  data_target_f.rst  gammapy.rst  index.rst  io.rst  stats.rst
docs/source/_api_docs/analysis/: analysis_analysis.rst  analysis_step.rst  analysis_step_base.rst
docs/source/_api_docs/base/: base_base.rst  base_geom.rst  base_reduction.rst
docs/source/_api_docs/config/: config.rst  generator.rst  operations.rst
docs/source/_api_docs/data/: data_target.rst
docs/source/_api_docs/gammapy/: interop_model.rst  read_models.rst
docs/source/_api_docs/io/: input_dl3.rst  io_dl4.rst
docs/source/_api_docs/stats/: stats.rst  utils.rst
docs/source/_templates/: template.yaml
docs/source/html/: .buildinfo  CHANGELOG.html  CONTRIBUTING.html  analysis.html  base_base.html  base_geom.html  base_reduction.html  config.html  data_1d.html  data_3d.html  data_base.html  data_dl4.html  data_target.html  data_target_b.html  data_target_f.html  genindex.html  index.html  installation.html  io.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/html/.doctrees/: CHANGELOG.doctree  CONTRIBUTING.doctree  analysis.doctree  base_base.doctree  base_geom.doctree  base_reduction.doctree  config.doctree  data_1d.doctree  data_3d.doctree  data_base.doctree  data_dl4.doctree  data_target.doctree  data_target_b.doctree  data_target_f.doctree  index.doctree  installation.doctree  io.doctree
docs/source/html/_modules/: index.html
docs/source/html/_sources/: CONTRIBUTING.md.txt  base_reduction.rst.txt  config.rst.txt  data_target.rst.txt  installation.md.txt
notebooks/: SED_comparison_joint_fit_vs_individual_fit.ipynb  get_preferred_spectral_model.ipynb  joint_fit_LAT_LST.ipynb  joint_fit_varying_ebl_scale_factor.ipynb  test_dataset_1d_step.ipynb  test_dataset_3d_step.ipynb  test_dl4_steps.ipynb  test_dl4_steps_Crab_Nov2020.ipynb  test_explore_EBL.ipynb  test_filtering_data_models.ipynb  test_filtering_models.ipynb  test_models.ipynb
scripts/: check_preferred_model.py  download_asgardpy_data.sh  prepare_changelog.py  release.sh  release_notes.py  run_asgardpy_full.py
src/asgardpy/: __init__.py  _version.py  conftest.py  version.py
src/asgardpy/_dev_version/: __init__.py
src/asgardpy/analysis/: __init__.py  analysis.py  step.py  step_base.py
src/asgardpy/analysis/tests/: test_analysis_steps.py
src/asgardpy/base/: __init__.py  base.py  geom.py  reduction.py
src/asgardpy/config/: __init__.py  generator.py  operations.py  template.yaml
src/asgardpy/config/model_templates/: model_template_fov.yaml  (+5 more)
src/asgardpy/data/: __init__.py  dataset_1d.py  dataset_3d.py  dl4.py  target.py
src/asgardpy/gammapy/: __init__.py  interoperate_models.py  read_models.py
src/asgardpy/io/: __init__.py  input_dl3.py  io_dl4.py
src/asgardpy/stats/: __init__.py  stats.py  utils.py
src/asgardpy/tests/: config_crab_mult_instruments.yaml  config_gpy_mwl.yaml  config_hawc.yaml  config_test_base.yaml  config_test_ebl.yaml  config_test_gadf.yaml
tests/: test_basic.py
(+21 files in other folders)
