[metadata]
name = asgardpy
description = Gammapy-based package for easy joint analysis of different gamma-ray datasets
author = Chaitanya Priyadarshi
author_email = chaitanya.p.astrphys@gmail.com
license = Apache
url=https://github.com/chaimain/asgardpy
long_description = file: README.md
long_description_content_type = text/markdown
github_project = chaimain/asgardpy

[options]
python_requires = >=3.10
