[metadata]
name = asgardpy
description = Gammapy-based pipeline for easy joint analysis of different gamma-ray datasets
author = Chaitanya Priyadarshi
author_email = chaitanya.p.astrphys@gmail.com
license = Apache
url=https://github.com/chaimain/asgardpy
long_description = file: README.md
long_description_content_type = text/markdown
github_project = chaimain/asgardpy

[options]
python_requires = >=3.10

[flake8]
max-line-length = 115

ignore =
    # these rules don't play well with black
    # whitespace before :
    E203
    # line break before binary operator
    W503

exclude =
    .venv
    .git
    __pycache__
    docs/build
    dist
    .mypy_cache

per-file-ignores =
    # __init__.py files are allowed to have unused imports and lines-too-long
    */__init__.py:F401
    */**/**/__init__.py:F401,E501

[codespell]
skip = *.ipynb,*.map,*.css,*.js
ignore-words = codespell_ignore_words.txt
count =
quiet-level = 3
